Align Fix

--- a/WelcomePage.css
+++ b/WelcomePage.css
@@ -21,11 +21,11 @@
 
 
 #buttonPlease{
-  margin-left: 730px;
+  padding-left: 620px;
 }
 
 
 #bigContainer{
-  margin-bottom: 90px;
-  margin-top: 100px;
+  padding-bottom: 90px;
+  padding-top: 100px;
 }
